# DRIVE

./: .gitignore  CMakeLists.txt  README.md  create_pyenv.sh  none  package.xml  requirements.txt  setup.cfg  setup.py
config/: _drive_maestro_mode.config.yaml  _husky.config.yaml  _husky_logger.config.yaml  _marmotte.config.yaml  _marmotte_validate.config.yaml  _warthog.config.yaml  _warthog_logger.config.yaml  _warthog_model_trainer.config copy.yaml  _warthog_model_trainer.config.yaml  husky.config.yaml  marmotte.config.yaml  marmotte_validate.config.yaml  warthog.config.yaml
default_param/: controller_params.yaml
doughnut_calib/: doughnut_calib.py  doughnut_keyboard.py  pose_cmds_logger_node.py  test.py
drive/: drive_maestro_node.py  drive_node.py  gui_message.yaml  model_trainer_node.py  pose_cmds_logger_node.py  test.py  will.py
drive_datasets/: all_terrain_diamond_shape_graph_data.pkl
launch/: README.md  calib.launch  drive.launch.xml  drive_warthog.launch.py  gazebo_example_husky_calibration.launch  husky.launch.xml  keyboard.launch  keyboard.launch.xml  maestro_ns.launch.py  maestro_warthog.launch.py  marmotte.launch  marmotte.launch.xml  model_trainer.launch.py  offline_drive.launch.py  offline_logger_warthog.launch.py  offline_mapping.launch.py  warthog.launch  warthog.launch.xml
mapping_param/: _config.yaml
model_training/: complete_training.py
motion_model_available/: _pwrtain_motion_model_parameters.yaml
scripts/: doughnut_calib.py  doughnut_keyboard.py  input_space_calibration_result.py  none  odom_calib_cmd.py  run_drive.sh  run_driver.sh  (+4 more)
(+785 files in other folders)
